show distance in search result

--- a/knowledge_search_html/index.html
+++ b/knowledge_search_html/index.html
@@ -27,7 +27,7 @@
                 <h4 class="panel-title"><a href="{{=_val.link}}" target="_blank">{{=_val.title}}</a></h4>
                 <p>{{=_val.description}}</p>
                 <p><a href="{{=_val.link}}" target="_blank">{{=_val.link}}</a><br>{{=_val.sizename}}</p>
-                <p>{{=_val.index}}</p>
+                <p>Distance: {{=_val.distance}}, Index: {{=_val.index}}</p>
             </div>
             {{/@items}}
         </script>
